# monitoring-ui-plugin

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  monitoring-ui-plugin.spec
cgi/: Makefile.am  index.cgi  monitoring-ui.cgi
docs/: JavaScript  monitoring-ui-plugin_logo.ai
docs/modules/: Config.html  Data.html  Web.html
etc/: Makefile.am  datasource.yml  monitoring-ui.yml
etc/mappings/: ovirt.yml  vms.yml
lib/: Makefile.am
lib/oVirtUI/: Config.pm  Data.pm  Web.pm
log/: Makefile.am
sample-config/: httpd.conf
selinux/: monitoring-ui.fc  monitoring-ui.te
share/: Makefile.am
share/css/: jquery-ui-1.10.3.custom.min.css  jquery-ui.css
share/css/default/: monitoring-ui.css  monitoring.css
share/javascript/: jquery-ui-1.10.3.custom.min.js  jquery.loadTemplate-0.5.4.js  monitoring-ui.js
share/js-templates/: service_details.html  service_error.html  service_graphs.html  service_status.html
share/src/: errors.tt  footer.tt
share/src/default/: header.tt  results.tt  results_details.tt  results_footer.tt  results_graph.tt  results_header.tt
tools/: pod.pl  pod2html
ui-plugins/: Makefile.am  monitoring-ui.json  ovirt-monitoring.json
ui-plugins/monitoring-files/: start.html
www/ovirt-monitoring/cgi/: graph.cgi  index.cgi  json.cgi
www/ovirt-monitoring/etc/: monitoring-ui.yml
www/ovirt-monitoring/lib/oVirtUI/: Config.pm  Data.pm
www/ovirt-monitoring/share/javascript/: monitoring-ui.js  (+1 more)
www/ovirt-monitoring/src/: header.tt  mon_results_details.tt  mon_results_details_tab.tt  mon_results_graph.tt  mon_results_header.tt
(+16 files in other folders)
